file_uploader -> library

--- a/register/templates/register/logout.html
+++ b/register/templates/register/logout.html
@@ -3,6 +3,6 @@
 <br>
 <div class="content has-text-centered">
 <h4>ログアウトしました。</h4>
-<a href="{% url 'showcase:news_card' %}" class="button is-primary">戻る<a>
+<a href="{% url 'notice:news_card' %}" class="button is-primary">戻る<a>
 </div>
 {% endblock %}
