--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
   <!-- navbar -->
   <nav class="navbar is-black is-size-6" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-      <a class="navbar-item" href="{% url 'showcase:news_card' %}">ホーム</a>
+      <a class="navbar-item" href="{% url 'notice:news_card' %}">ホーム</a>
       {# ハンバーガアイコンのため以下の5行とbase.htmlでのjsスクリプトが必要 #}
       <a role="button" class="navbar-burger " aria-label="menu" aria-expanded="false" data-target="navbarMypage">
         <span aria-hidden="true"></span>
@@ -29,8 +29,8 @@
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">メインメニュー</a>
           <div class="navbar-dropdown">
-            <a href="{% url 'showcase:news_card' %}" class="dropdown-item is-size-6">お知らせ</a>
-            <a href="{% url 'information:information' %}" class="dropdown-item is-size-6">その他情報<a>
+            <a href="{% url 'notice:news_card' %}" class="dropdown-item is-size-6">お知らせ</a>
+            <a href="#" class="dropdown-item is-size-6">その他情報<a>
             <hr class="navbar-divider">
             <a href="{% static 'pamphlet.pdf' %}" class="dropdown-item is-size-6">パンフレット<a>
           </div>
@@ -39,25 +39,25 @@
       </div>
     
       <div class="navbar-end">
-        {% if perms.showcase.add_news or perms.file_uploader.add_file %}
+        {% if perms.notice.add_news or perms.library.add_file %}
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">管理者用</a>
             <div class="navbar-dropdown">
-              {% if perms.showcase.add_news %}
-                <a class="dropdown-item is-size-6" href="{% url 'showcase:news_list' %}">お知らせ管理</a>
+              {% if perms.notice.add_news %}
+                <a class="dropdown-item is-size-6" href="{% url 'notice:news_list' %}">お知らせ管理</a>
               {% endif %}
-              {% if perms.file_uploader.add_file %}
+              {% if perms.library.add_file %}
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item is-size-6" href="{% url 'file_uploader:file_index' %}">文書ファイル登録・修正</a>
-                <a class="dropdown-item is-size-6" href="{% url 'information:info_list' %}">情報ファイル登録・修正</a>
+                <a class="dropdown-item is-size-6" href="{% url 'library:file_index' %}">文書ファイル登録・修正</a>
+                <a class="dropdown-item is-size-6" href="#">情報ファイル登録・修正</a>
               {% endif %}
             </div>
           </div>
         {% endif %}
         {% if not user.id %}
-          <a class="navbar-item" href="{% url 'permit:login' %}">区分所有者ログイン</a>
+          <a class="navbar-item" href="{% url 'register:login' %}">区分所有者ログイン</a>
         {% else %}
-          <a class="navbar-item" href="{% url 'permit:logout' %}">ログアウト</a>
+          <a class="navbar-item" href="{% url 'register:logout' %}">ログアウト</a>
         {% endif %}
       </div>
     </div>
@@ -82,7 +82,7 @@
               {% for menu in menu_list %}
               <tr>
                 <td class="has-text-left">
-                  <a href="{% url 'showcase:bigcategory' menu.pk %}" class="vmenu">{{menu}}</a>
+                  <a href="{% url 'notice:bigcategory' menu.pk %}" class="vmenu">{{menu}}</a>
                 </td>
               </tr>
               {% endfor %}
@@ -91,7 +91,7 @@
           <p>*：区分所有者専用</p>
         </div>
         <p>検索キーワード</p>
-        <form method="GET" action="{% url 'showcase:search' %}">
+        <form method="GET" action="{% url 'notice:search' %}">
           <input type="search" class="input" placeholder="Search" name="keyword" value={{keyword}}>
           <button type="submit" class="button is-small" style="display:none"></button>
         </form>
