パンフレットを別タブで表示

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
             <a href="{% url 'notice:news_card' %}" class="dropdown-item is-size-6">お知らせ</a>
             <a href="#" class="dropdown-item is-size-6">その他情報<a>
             <hr class="navbar-divider">
-            <a href="{% static 'pamphlet.pdf' %}" class="dropdown-item is-size-6">パンフレット<a>
+            <a href="{% static 'pamphlet.pdf' %}" class="dropdown-item is-size-6" target="_blank">パンフレット<a>
           </div>
         </div>
         <a class="navbar-item" href="https://accounting2.sophiagardens.org" target="_blank">会計資料</a>
