--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
           <a class="navbar-link">メインメニュー</a>
           <div class="navbar-dropdown">
             <a href="{% url 'notice:news_card' %}" class="dropdown-item is-size-6">お知らせ</a>
-            <a href="#" class="dropdown-item is-size-6">その他情報<a>
+            <a href="{% url 'information:information' %}" class="dropdown-item is-size-6">連絡先/情報<a>
             <hr class="navbar-divider">
             <a href="{% static 'pamphlet.pdf' %}" class="dropdown-item is-size-6" target="_blank">パンフレット<a>
           </div>
