--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
             <a href="{% static 'pamphlet.pdf' %}" class="dropdown-item is-size-6" target="_blank">パンフレット<a>
           </div>
         </div>
-        <a class="navbar-item" href="https://accounting2.sophiagardens.org" target="_blank">会計資料</a>
+        <a class="navbar-item" href="https://accounting.sophiagardens.org" target="_blank">会計資料</a>
       </div>
     
       <div class="navbar-end">
