--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
               {% if perms.library.add_file %}
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item is-size-6" href="{% url 'library:file_index' %}">文書ファイル登録・修正</a>
-                <a class="dropdown-item is-size-6" href="#">情報ファイル登録・修正</a>
+                <a class="dropdown-item is-size-6" href="{% url 'information:info_list' %}">情報ファイル登録・修正</a>
               {% endif %}
             </div>
           </div>
