--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,12 @@
             <a href="{% static 'pamphlet.pdf' %}" class="dropdown-item is-size-6" target="_blank">パンフレット<a>
           </div>
         </div>
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">保管庫</a>
+          <div class="navbar-dropdown">
+            <a href="{% url 'library:rijikai_minutes' %}" class="dropdown-item is-size-6">理事会議事録</a>
+          </div>
+        </div>
         <a class="navbar-item" href="https://accounting.sophiagardens.org" target="_blank">会計資料</a>
       </div>
 
