context_processors.pyをwarehouse/に移動。

--- a/templates/base.html
+++ b/templates/base.html
@@ -119,7 +119,8 @@
           &copy; 2016 -
           <script language="JavaScript" type="text/javascript">
             document.write(new Date().getFullYear());
-          </script> ソフィア・ガーデンズ川崎 管理組合 gotonorio@gmail.com
+          </script>
+          ソフィア・ガーデンズ川崎 管理組合 gotonorio@gmail.com (Ver-{{VERSION_NO}})
         </span>
       </div>
     </div>
