--- a/notice/templates/notice/news_card_list.html
+++ b/notice/templates/notice/news_card_list.html
@@ -8,7 +8,7 @@
   <div class="hero-body">
     <div class="container has-text-centered">
       <h1 class="title"> ソフィア・ガーデンズ川崎 </h1>
-      <h4 class="subtitle"> 管理組合 ホームページ (ver-1.0.0) </h4>
+      <h4 class="subtitle"> 管理組合 ホームページ </h4>
       <p>IEやEdgeではドロップダウンメニューが動作不安定です。取り敢えずchromeを使ってください。</p>
     </div>
   </div>
