--- a/notice/templates/notice/news_card_list.html
+++ b/notice/templates/notice/news_card_list.html
@@ -9,7 +9,7 @@
     <div class="container has-text-centered">
       <h1 class="title"> ソフィア・ガーデンズ川崎 </h1>
       <h4 class="subtitle"> 管理組合 ホームページ </h4>
-      <p>IEやEdgeではドロップダウンメニューが動作不安定です。取り敢えずchromeを使ってください。</p>
+      <!--<p>IEやEdgeで表示不具合の場合、chromeを使ってください。</p>-->
     </div>
   </div>
 </section>
