--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,7 @@
           </div>
         </div>
         <a class="navbar-item" href="https://accounting.sophiagardens.org" target="_blank">会計資料</a>
+        <a class="navbar-item" href="https://facility.sophiagardens.org" target="_blank">設備台帳</a>
       </div>
 
       <div class="navbar-end">
