--- a/register/templates/register/login.html
+++ b/register/templates/register/login.html
@@ -13,7 +13,7 @@
     </table>
     <br>
     <div>
-      <button type="submit" name='next' value='{{next}}' class="button is-danger ">ログイン</button>
+      <button type="submit" name='next' value='{{next}}' class="button is-primary">ログイン</button>
       <a class="button is-warning" href="{% url 'notice:news_card' %}">戻る</a>
     </div>
   </form>
