長期修繕計画へのリンクを追加

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,7 @@
         </div>
         <a class="navbar-item" href="https://accounting.sophiagardens.org" target="_blank">会計資料</a>
         <a class="navbar-item" href="https://facility.sophiagardens.org" target="_blank">設備台帳</a>
+        <a class="navbar-item" href="https://repairplan.sophiagardens.org" target="_blank">長期修繕計画</a>
       </div>
 
       <div class="navbar-end">
