タイトルを見直し

--- a/register/templates/register/login.html
+++ b/register/templates/register/login.html
@@ -1,5 +1,7 @@
 {% extends "base_single_page.html" %}
-
+{% block title %}
+ログイン
+{% endblock %}
 {% block content %}
 <div class="ss_container is-fluid ">
   <br>
