--- a/templates/base_single_page.html
+++ b/templates/base_single_page.html
@@ -10,7 +10,7 @@
   {# css #}
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css" rel="stylesheet">
   <link href="{% static 'mycss/mycss.css' %}" rel="stylesheet">
-  <title>{% block title %}ファイル管理{% endblock %}</title>
+  <title>{% block title %}{% endblock %}</title>
   
   {% block head %}
   {% endblock %}
