お知らせソースの整理

--- a/notice/templates/notice/news_manage_list.html
+++ b/notice/templates/notice/news_manage_list.html
@@ -15,7 +15,7 @@
     <h3 class="text-center">お知らせ一覧</h3>
   </div>
   <hr>
-  <a href="{% url 'notice:news_create' %}" class="button is-primary">新規アップロード</a>
+  <a href="{% url 'notice:news_create' %}" class="button is-primary">新規作成</a>
   <a href="{% url 'notice:news_card' %}" class="button is-primary">戻る</a>
   <br>
   <br>
