--- a/notice/templates/notice/news_form.html
+++ b/notice/templates/notice/news_form.html
@@ -4,7 +4,7 @@
 <div class="container">
   <br>
   <div class="content has-text-centered">
-    news_form.html
+    <h4>お知らせの入力/更新</h4>
   </div>
   <form action="" method="POST" enctype='multipart/form-data'>
     <div class="content">
