メニューの変更

--- a/templates/403.html
+++ b/templates/403.html
@@ -13,7 +13,7 @@
     {% if exception %}
     <p style="color: red">{{ exception }}</p>
     {% endif %}
-      <h3><a href="javascript:history.back()"><< Back</a></h3>
+      <h3><a href="javascript:history.back()">戻る</a></h3>
   </section>
 </div>
 {% endblock %}
