光ケーブル工事予定をメニューバーに追加

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,7 @@
             <a href="{% url 'library:rijikai_minutes' %}" class="dropdown-item is-size-6">理事会議事録</a>
           </div>
         </div>
+        <a class="navbar-item" href="https://calendar.sophiagardens.org" target="_blank">光ケーブル工事予定</a>
       </div>
 
       <div class="navbar-end">
