メニュー項目名を修正（管理組合カレンダー）

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
             <a class="dropdown-item" href="#">総会議事録</a>
           </div>
         </div>
-        <a class="navbar-item" href="https://calendar.sophiagardens.org" target="_blank">光ケーブル工事予定</a>
+        <a class="navbar-item" href="https://calendar.sophiagardens.org" target="_blank">管理組合カレンダー</a>
       </div>
 
       <div class="navbar-end">
