--- a/register/templates/register/login.html
+++ b/register/templates/register/login.html
@@ -7,18 +7,28 @@
   <br>
   <div class="content has-text-centered">
     <h4>区分所有者 ログイン</h4>
-  <br>
-  <form method='post' action=''>
-    {% csrf_token %}
-    <table class="table">
-    {{form}}
-    </table>
     <br>
-    <div>
-      <button type="submit" name='next' value='{{next}}' class="button is-primary">ログイン</button>
-      <a class="button is-warning" href="{% url 'notice:news_card' %}">戻る</a>
-    </div>
-  </form>
+    <form method='POST' enctype='multipart/form-data' id='form_style'>
+      {{ form.non_field_errors }}
+      {% for field in form %}
+        <div class='field'>
+          <div class='control'>
+            <div class='label'>{{ field.label_tag }}</div>
+            <div class='my_field'>{{ field }}</div>
+            {% if field.help_text %}
+              <span class='helptext'>{{ field.help_text }}</span>
+            {% endif %}
+            {{ field.errors }}
+          </div>
+        </div>
+      {% endfor %}
+      {% csrf_token %}
+      <br>
+      <div class='my_button has-text-centered'>
+        <button type='submit' class='button is-primary'>読込み</button>
+        <a class='button is-danger' href='javascript:void(0);' onclick='window.history.back();'>キャンセル</a>
+      </div>
+    </form>
   </div>
 </div>
 {% endblock %}
