--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
   {# css #}
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.css" rel="stylesheet">
   <link href="{% static 'mycss/mycss.css' %}" rel="stylesheet">
+  <link href="{% static 'mycss/wh2.css' %}" rel="stylesheet">
   <title>{% block title %}文書資料{% endblock %}</title>
 </head>
 <body>
