--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/png" href="{{STATIC_URL}}/static/favicon.ico" />
   {# css #}
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
   <link href="{% static 'mycss/mycss.css' %}" rel="stylesheet">
   <link href="{% static 'mycss/wh2.css' %}" rel="stylesheet">
   <title>{% block title %}文書資料{% endblock %}</title>
