bulma CDNアップデート

--- a/notice/templates/notice/news_manage_list.html
+++ b/notice/templates/notice/news_manage_list.html
@@ -1,7 +1,7 @@
 {% extends "base_single_page.html" %}
 <!-- navbar -->
 {% block navbar %}
-<nav class="navbar is-black is-size-6" role="navigation" aria-label="main navigation">
+<nav class="navbar is-fixed-top is-black is-size-6" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item">お知らせ管理</a>
     <a role="button" class="navbar-burger " aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
