--- a/templates/base_single_page.html
+++ b/templates/base_single_page.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="ja">
+<html class="has-navbar-fixed-top" lang="ja">
 
 <head>
   <meta charset="utf-8">
