--- a/information/templates/information/information_confirm_delete.html
+++ b/information/templates/information/information_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_single_page.html" %}
 {% block content %}
 <form action="" method="POST" enctype='multipart/form-data'>
   <div class="text-center">
