--- a/templates/base_single_page.html
+++ b/templates/base_single_page.html
@@ -4,33 +4,24 @@
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/png" href="{{STATIC_URL}}/static/favicon.ico" />
+  <link rel="shortcut icon" type="image/png" href="{{STATIC_URL}}/static/favicon.ico"/>
   {# css #}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
   <link href="{% static 'mycss/mycss.css' %}" rel="stylesheet">
-  <link href="{% static 'mycss/wh2.css' %}" rel="stylesheet">
-  <title>{% block title %}{% endblock %}</title>
-  
+  <title>{% block title %}マンション会計{% endblock %}</title>
   {% block head %}
   {% endblock %}
 </head>
-
 <body>
-  <!-- navbar -->
   {% block navbar %}
-  {% endblock %}
-  <!-- ヘッダー（hero) -->
-  {% block header %}
-  {% endblock %}
-  <br>
-  <!-- contents -->
+  {% endblock%}
+  <!-- footerを設置する場合、<main>で囲む -->
   <main>
-    {% block content %}
-    {% endblock %}
+  {% block content %}
+  {% endblock %}
   </main>
-  <!-- フッタ -->
+<!-- フッタ -->
   <footer class="my_footer">
     <div class="container">
       <div class="content has-text-centered">
@@ -38,14 +29,22 @@
           &copy; 2016 -
           <script language="JavaScript" type="text/javascript">
             document.write(new Date().getFullYear());
-          </script> ソフィア・ガーデンズ川崎 管理組合
+          </script>
+          ソフィア・ガーデンズ川崎 管理組合 gotonorio@gmail.com
         </span>
       </div>
     </div>
   </footer>
+
   {# 参考： https://bulma.io/documentation/components/navbar/ #}
   {# ToDo ハンバーガアイコン用のjs。staticから読み込むことはできないか？ #}
   <script>
+      // notificationを×押下で閉じれるように。
+    for (const element of document.querySelectorAll('.notification > .delete')) {
+        element.addEventListener('click', e => {
+            e.target.parentElement.classList.add('is-hidden');
+        });
+    }
   // navbar-burgerのボタン処理。https://bulma.io/documentation/components/navbar/
     document.addEventListener('DOMContentLoaded', () => {
       // Get all "navbar-burger" elements
