--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/png" href="{{STATIC_URL}}/static/favicon.ico" />
-  <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon.png">
+  <link rel="apple-touch-icon-precomposed" href="{{STATIC_URL}}/static/apple-touch-icon-precomposed.png">
 
   {# css #}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
