保管庫メニューを非表示

--- a/notice/templates/notice/news_card_list.html
+++ b/notice/templates/notice/news_card_list.html
@@ -2,7 +2,69 @@
 {% load static %}
 {% load mytag %}
 
-<!-- navbar base.html -->
+<!-- navbar -->
+{% block navbar %}
+<nav class="navbar is-fixed-top is-black is-size-6" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <a class="navbar-item" href="{% url 'notice:news_card' %}">ホーム</a>
+    {# ハンバーガアイコンのため以下の5行とbase.htmlでのjsスクリプトが必要 #}
+    <a role="button" class="navbar-burger " aria-label="menu" aria-expanded="false" data-target="navbarMypage">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+  <div id="navbarMypage" class="navbar-menu">
+    <div class="navbar-start">
+      <div class="navbar-item has-dropdown is-hoverable">
+        <a class="navbar-link is-size-6">メインメニュー</a>
+        <div class="navbar-dropdown">
+          <a class="dropdown-item" href="https://accounting.sophiagardens.org" target="_blank">会計資料</a>
+          <a class="dropdown-item" href="https://facility.sophiagardens.org" target="_blank">設備台帳</a>
+          <a class="dropdown-item" href="https://repairplan.sophiagardens.org" target="_blank">長期修繕計画</a>
+          <hr class="navbar-divider">
+          <a href="{% url 'information:information' %}" class="dropdown-item">連絡先/情報<a>
+          <hr class="navbar-divider">
+          <a href="{% static 'pamphlet.pdf' %}" class="dropdown-item" target="_blank">パンフレット<a>
+        </div>
+      </div>
+      {% comment %} <div class="navbar-item has-dropdown is-hoverable">
+        <a class="navbar-link">保管庫</a>
+        <div class="navbar-dropdown">
+          <a class="dropdown-item" href="{% url 'library:rijikai_minutes' %}">理事会議事録</a>
+          <a class="dropdown-item" href="{% url 'library:rijikai_data' %}">理事会資料</a>
+          <hr class="navbar-divider">
+          <a class="dropdown-item" href="{% url 'library:soukai_rejime' %}#">総会議案書</a>
+          <a class="dropdown-item" href="#">総会議事録</a>
+        </div>
+      </div> {% endcomment %}
+      <a class="navbar-item" href="https://calendar.sophiagardens.org" target="_blank">管理組合カレンダー</a>
+    </div>
+    <div class="navbar-end">
+      {% if perms.notice.add_news or perms.library.add_file %}
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link is-size-6">管理者用</a>
+          <div class="navbar-dropdown">
+            {% if perms.notice.add_news %}
+              <a class="dropdown-item" href="{% url 'notice:news_list' %}">お知らせ管理</a>
+            {% endif %}
+            {% if perms.library.add_file %}
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% url 'library:file_index' %}">文書ファイル登録・修正</a>
+              <a class="dropdown-item" href="{% url 'information:info_list' %}">情報ファイル登録・修正</a>
+            {% endif %}
+          </div>
+        </div>
+      {% endif %}
+      {% if not user.id %}
+        <a class="navbar-item" href="{% url 'register:login' %}">区分所有者ログイン</a>
+      {% else %}
+        <a class="navbar-item" href="{% url 'register:logout' %}">ログアウト</a>
+      {% endif %}
+    </div>
+  </div>
+</nav>
+{% endblock navbar %}
 
 {% block header %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/a11y-dark.min.css">
@@ -15,7 +77,7 @@
     </div>
   </div>
 </section>
-{% endblock %}
+{% endblock header %}
 
 {% block content %}
 {% for news in news_list %}
