お知らせ管理の修正

--- a/notice/templates/notice/news_confirm_delete.html
+++ b/notice/templates/notice/news_confirm_delete.html
@@ -1,6 +1,6 @@
 {% extends "base_single_page.html" %}
 {% block content %}
-<div class="sm_container">
+<div class="container">
   <br>
   <form action="" method="POST" enctype='multipart/form-data'>
     <div class="content ">
