--- a/notice/templates/notice/news_card_list.html
+++ b/notice/templates/notice/news_card_list.html
@@ -6,7 +6,7 @@
 {% block navbar %}
 <nav class="navbar is-fixed-top is-black is-size-6" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="{% url 'notice:news_card' %}">ホーム</a>
+    <a class="navbar-item" href="{% url 'notice:news_card' %}">【SG川崎】</a>
     {# ハンバーガアイコンのため以下の5行とbase.htmlでのjsスクリプトが必要 #}
     <a role="button" class="navbar-burger " aria-label="menu" aria-expanded="false" data-target="navbarMypage">
       <span aria-hidden="true"></span>
@@ -16,18 +16,8 @@
   </div>
   <div id="navbarMypage" class="navbar-menu">
     <div class="navbar-start">
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link is-size-6">メインメニュー</a>
-        <div class="navbar-dropdown">
-          <a class="dropdown-item" href="https://accounting.sophiagardens.org" target="_blank">会計資料</a>
-          <a class="dropdown-item" href="https://facility.sophiagardens.org" target="_blank">設備台帳</a>
-          <a class="dropdown-item" href="https://repairplan.sophiagardens.org" target="_blank">長期修繕計画</a>
-          <hr class="navbar-divider">
-          <a href="{% url 'information:information' %}" class="dropdown-item">連絡先/情報<a>
-          <hr class="navbar-divider">
-          <a href="{% static 'pamphlet.pdf' %}" class="dropdown-item" target="_blank">パンフレット<a>
-        </div>
-      </div>
+      <a href={% url 'register:menu' %} class="navbar-item">メニュー</a>
+      <a class="navbar-item" href="https://calendar.sophiagardens.org" target="_blank">カレンダー</a>
       {% comment %} <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">保管庫</a>
         <div class="navbar-dropdown">
@@ -38,7 +28,6 @@
           <a class="dropdown-item" href="#">総会議事録</a>
         </div>
       </div> {% endcomment %}
-      <a class="navbar-item" href="https://calendar.sophiagardens.org" target="_blank">管理組合カレンダー</a>
     </div>
     <div class="navbar-end">
       {% if perms.notice.add_news or perms.library.add_file %}
