--- a/static/mycss/wh2.css
+++ b/static/mycss/wh2.css
@@ -3,3 +3,12 @@ table{
   margin: 3px;
   white-space: normal;
 }
+
+.menubox {
+  border: solid 1px;
+  margin-top: 2px;
+  margin-left: 10px;
+  padding: 10px;
+  position: relative;
+  background-color:#FFFFEE;
+}
