--- a/register/templates/register/menu.html
+++ b/register/templates/register/menu.html
@@ -38,43 +38,51 @@
   </div>
 </section>
 
-<div class="container is-fluid">
 <br>
-  <div class="columns">
-    <div class="column">
-      <div class="menubox has-text-centered has-text-weight-semibold is-size-5">
-        <a href="https://accounting.sophiagardens.org" target="_blank">会計資料</a>
-      </div>
-    </div>
-    <div class="column">
-      <div class="menubox has-text-centered has-text-weight-semibold is-size-5">
-        <a href="https://facility.sophiagardens.org" target="_blank">設備台帳</a>
-      </div>
-    </div>
-    <div class="column">
-      <div class="menubox has-text-centered has-text-weight-semibold is-size-5">
-        <a href="https://repairplan.sophiagardens.org" target="_blank">修繕計画</a>
-      </div>
-    </div>
-    {% comment %} <div class="column">
-      <div class="menubox has-text-centered has-text-weight-semibold is-size-5">
-        <a href="https://gijiroku.sophiagardens.org" target="_blank">議事録</a>
-      </div>
-    </div> {% endcomment %}
+<div class="container is-fluid">
+  <div class="is-size-4">
+  <p>インフォメーション</p>
   </div>
-  <hr>
+  <br>
   <div class="columns">
     <div class="column is-2">
       <div class="menubox has-text-centered has-text-weight-semibold is-size-5">
         <a href="{% url 'information:information' %}">連絡先</a>
       </div>
     </div>
-    <div class="column is-2">
+    <div class="column is-3">
       <div class="menubox has-text-centered has-text-weight-semibold is-size-5">
         <a href="{% static 'pamphlet.pdf' %}" target="_blank">パンフレット</a>
       </div>
     </div>
-
+  </div>
+  <br>
+  <br>
+  <div class="is-size-4">
+  <p>管理組合専用</p>
+  </div>
+  <br>
+  <div class="columns">
+    <div class="column is-2">
+      <div class="menubox has-text-centered has-text-weight-semibold is-size-5">
+        <a href="https://accounting.sophiagardens.org" target="_blank">会計資料</a>
+      </div>
+    </div>
+    <div class="column is-2">
+      <div class="menubox has-text-centered has-text-weight-semibold is-size-5">
+        <a href="https://facility.sophiagardens.org" target="_blank">設備台帳</a>
+      </div>
+    </div>
+    <div class="column is-2">
+      <div class="menubox has-text-centered has-text-weight-semibold is-size-5">
+        <a href="https://repairplan.sophiagardens.org" target="_blank">修繕計画</a>
+      </div>
+    </div>
+    <div class="column is-2">
+      <div class="menubox has-text-centered has-text-weight-semibold is-size-5">
+        <a href="https://gijiroku.sophiagardens.org" target="_blank">議事録</a>
+      </div>
+    </div>
   </div>
 </div>
 {% endblock %}
