--- a/notice/templates/notice/news_card_list.html
+++ b/notice/templates/notice/news_card_list.html
@@ -57,7 +57,7 @@
 
 {% block header %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/a11y-dark.min.css">
-<link href="{% static 'blog.css' %}" rel="stylesheet">
+<link href="{% static 'notice/blog.css' %}" rel="stylesheet">
 <section class="hero is-dark">
   <div class="hero-body">
     <div class="container has-text-centered">
