--- a/register/templates/register/menu.html
+++ b/register/templates/register/menu.html
@@ -3,7 +3,7 @@
 {% load mytag %}
 
 {% block head %}
-<link href="{% static 'mycss/wh2.css' %}" rel="stylesheet">
+<link href="{% static 'register/menu.css' %}" rel="stylesheet">
 {% endblock head%}
 
 <!-- navbar -->
@@ -40,47 +40,48 @@
 
 <br>
 <div class="container is-fluid">
-  <div class="is-size-4">
+  <div class="is-size-5">
   <p>インフォメーション</p>
   </div>
   <br>
   <div class="columns">
     <div class="column is-2">
-      <div class="menubox has-text-centered has-text-weight-semibold is-size-5">
-        <a href="{% url 'information:information' %}">連絡先</a>
+      <div class="free_menubox has-text-centered">
+        <a href="{% url 'information:information' %}" class="black_color">連絡先</a>
       </div>
     </div>
-    <div class="column is-3">
-      <div class="menubox has-text-centered has-text-weight-semibold is-size-5">
-        <a href="{% static 'pamphlet.pdf' %}" target="_blank">パンフレット</a>
+    <div class="column is-2">
+      <div class="free_menubox has-text-centered">
+        <a href="{% static 'pamphlet.pdf' %}" target="_blank" class="black_color">パンフレット</a>
       </div>
     </div>
   </div>
   <br>
+  <hr>
   <br>
-  <div class="is-size-4">
+  <div class="is-size-5">
   <p>管理組合専用</p>
   </div>
   <br>
   <div class="columns">
     <div class="column is-2">
-      <div class="menubox has-text-centered has-text-weight-semibold is-size-5">
-        <a href="https://accounting.sophiagardens.org" target="_blank">会計資料</a>
+      <div class="menubox has-text-centered">
+        <a href="https://accounting.sophiagardens.org" target="_blank" class="black_color">会計資料</a>
       </div>
     </div>
     <div class="column is-2">
-      <div class="menubox has-text-centered has-text-weight-semibold is-size-5">
-        <a href="https://facility.sophiagardens.org" target="_blank">設備台帳</a>
+      <div class="menubox has-text-centered">
+        <a href="https://facility.sophiagardens.org" target="_blank" class="black_color">設備台帳</a>
       </div>
     </div>
     <div class="column is-2">
-      <div class="menubox has-text-centered has-text-weight-semibold is-size-5">
-        <a href="https://repairplan.sophiagardens.org" target="_blank">修繕計画</a>
+      <div class="menubox has-text-centered">
+        <a href="https://repairplan.sophiagardens.org" target="_blank" class="black_color">修繕計画</a>
       </div>
     </div>
     <div class="column is-2">
-      <div class="menubox has-text-centered has-text-weight-semibold is-size-5">
-        <a href="https://gijiroku.sophiagardens.org" target="_blank">議事録</a>
+      <div class="menubox has-text-centered">
+        <a href="https://gijiroku.sophiagardens.org" target="_blank" class="black_color">議事録</a>
       </div>
     </div>
   </div>
