--- a/notice/templates/notice/news_card_list.html
+++ b/notice/templates/notice/news_card_list.html
@@ -6,7 +6,7 @@
 {% block navbar %}
 <nav class="navbar is-fixed-top is-black is-size-6" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="{% url 'notice:news_card' %}">【SG川崎】</a>
+    <a class="navbar-item" href="{% url 'register:menu' %}">【メニュー】</a>
     {# ハンバーガアイコンのため以下の5行とbase.htmlでのjsスクリプトが必要 #}
     <a role="button" class="navbar-burger " aria-label="menu" aria-expanded="false" data-target="navbarMypage">
       <span aria-hidden="true"></span>
@@ -16,7 +16,6 @@
   </div>
   <div id="navbarMypage" class="navbar-menu">
     <div class="navbar-start">
-      <a href={% url 'register:menu' %} class="navbar-item">メニュー</a>
       <a class="navbar-item" href="https://calendar.sophiagardens.org" target="_blank">カレンダー</a>
       {% comment %} <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">保管庫</a>
