--- a/register/templates/register/menu.html
+++ b/register/templates/register/menu.html
@@ -21,7 +21,7 @@
     <div class="navbar-start">
     </div>
     <div class="navbar-end">
-      <a href="{% url 'notice:news_card' %}" class="navbar-item">戻る</a>
+      <a class="navbar-item" href="javascript:void(0);" onclick="window.history.back();">戻る</a>
     </div>
   </div>
 </nav>
@@ -45,6 +45,11 @@
   </div>
   <br>
   <div class="columns">
+    <div class="column is-2">
+      <div class="free_menubox has-text-centered">
+        <a href="{% url 'information:information' %}" class="black_color">基本使用規則</a>
+      </div>
+    </div>
     <div class="column is-2">
       <div class="free_menubox has-text-centered">
         <a href="{% url 'information:information' %}" class="black_color">連絡先</a>
