--- a/register/templates/register/menu.html
+++ b/register/templates/register/menu.html
@@ -47,7 +47,7 @@
   <div class="columns">
     <div class="column is-2">
       <div class="free_menubox has-text-centered">
-        <a href="{% url 'information:information' %}" class="black_color">基本使用規則</a>
+        <a href="https://sophiagardens.org/media/rule/基本使用規則.pdf" class="black_color">基本使用規則</a>
       </div>
     </div>
     <div class="column is-2">
