--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
         {% block content %}
         {% endblock %}
       </div>
-      <!-- 左サイド -->
+      <!-- 右サイド -->
       <div class="column is-3">
         <div class="content">
           <table class="table is-bordered">
